test/tests/compiler/6_statements_and_conditional_expressions/valid/ternary_short_circuit.plx
pub fn main(none) i32 {
    a: i32 = 1
    b: i32 = 0
    ? a then (b = 1) else (b = 2)
    return b
}
