test/tests/compiler/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/plx1_ternary_postfix_incr.plx
pub fn main(none) i32 {
    a: i32 = 2
    b: i32 = 1
    (? a > b then a++ else a)--
    return a
}
